--- a/Research/index.html
+++ b/Research/index.html
@@ -8,7 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Research</title>
     <style>
-
+        body {font-family: serif; font-size: 24pt}
     </style>
 </head>
 <body style="background-color:Snow;">
@@ -71,7 +71,7 @@
             <div class = "col-sm-8"><!--text-->
             <p>Quantum information and quantum chemistry go hand in hand. Not only is a quantum understanding of chemical systems necessary for advancing quantum computing, quantum computing methods will greatly enhance our ability to simulate systems with quantum behavior. So called Noisy Intermediate Scale Quantum (NISQ) methods are already being applied in chemistry today.</p> 
             </div>
-            <div class = "col-sm-4"><a href = "https://en.wikipedia.org/wiki/Bloch_sphere#/media/File:Bloch_sphere.svg"><img class = "img-responsive" src = "https://cpbunker.github.io/images/Bloch_sphere.png"></a></div>
+            <div class = "col-sm-4"><a href = "https://en.wikipedia.org/wiki/Bloch_sphere#/media/File:Bloch_sphere.svg"><img class = "img-responsive" src = "images/BlochSphere.png"></a></div>
             </div><!--end row no gutters-->
         </div><!-- end outer column-->
         
