--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Christian Bunker</title>
     <style>
-        body {font-family: serif}
+        body {font-family: 'Times New Roman', Times, serif; font-size: 24pt}
     </style>
 </head>
 <body style="background-color:Gainsboro">
@@ -42,7 +42,7 @@
     </div>
                                                                                                                                                   
     <!-- bio info -->
-    <div class="col-sm-3" style="background-color:Gainsboro;", class = "center">
+    <div class="col-sm-3" style="background-color:Gainsboro;", class="center">
             <div style="padding:20px;">I am a research assistant at the <a href="https://efrc.ufl.edu">Center for Molecular Magnetic Quantum Materials</a> at the University of Florida. I use numerical methods in quantum chemistry to investigate the rich physics of molecular systems.
     
             <!-- relevant personal links -->
