--- a/CV/index.html
+++ b/CV/index.html
@@ -35,7 +35,7 @@
     <div class="col-sm-3" style="background-color:Gainsboro;"></div>
     
     <!-- CV -->
-    <div class = "col-sm-6"><iframe src = "/pdfs/BunkerCV.pdf"></iframe></div>
+    <div class = "col-sm-6"><object data = "pdfs/BunkerCV.pdf" type="application/pdf">alt : <a href="pdfs/BunkerCV.pdf">CV</a></object></div>
     
     <!-- empty column -->
     <div class="col-sm-3" style="background-color:Gainsboro;"></div>
