--- a/CV2/index.html
+++ b/CV2/index.html
@@ -11,16 +11,14 @@
  <div id="adobe-dc-view"></div>
  <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
  <script type="text/javascript">
-    document.addEventListener("adobe_dc_view_sdk.ready", function()
-    {
-        var adobeDCView = new AdobeDC.View({clientId: "71f65d4e39334277a0f49cd651058e7a", divId: "adobe-dc-view"});
-        adobeDCView.previewFile(
-       {
-          content:   {location: {url: "https://documentcloud.adobe.com/view-sdk-demo/PDFs/Bodea Brochure.pdf"}},
-          metaData: {fileName: "Bodea Brochure.pdf"}
-       });
-    });
- </script>
+	document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
+		var adobeDCView = new AdobeDC.View({clientId: "71f65d4e39334277a0f49cd651058e7a", divId: "adobe-dc-view"});
+		adobeDCView.previewFile({
+			content:{location: {url: "https://cpbunker.github.io/CV/BunkerCV.pdf"}},
+			metaData:{fileName: "BunkerCV.pdf"}
+		}, {embedMode: "IN_LINE"});
+	});
+</script>
 </body>
 </html>
 
