--- a/CV2/index.html
+++ b/CV2/index.html
@@ -7,18 +7,30 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
  <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1"/>
 </head>
-<body style="margin: 0px">
- <div id="adobe-dc-view"></div>
- <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
- <script type="text/javascript">
-	document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
-		var adobeDCView = new AdobeDC.View({clientId: "71f65d4e39334277a0f49cd651058e7a", divId: "adobe-dc-view"});
-		adobeDCView.previewFile({
-			content:{location: {url: "https://cpbunker.github.io/CV/BunkerCV.pdf"}},
-			metaData:{fileName: "BunkerCV.pdf"}
-		}, {embedMode: "IN_LINE"});
-	});
-</script>
+<body style="background-color:Snow">
+
+    <div class = "row"><!-- content row-->
+
+         <!-- empty column -->
+        <div class="col-sm-3"></div>   
+
+        <!-- pdf render column -->
+        <div class = "col-sm-6" id="adobe-dc-view"></div>
+        <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
+        <script type="text/javascript">
+            document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
+                var adobeDCView = new AdobeDC.View({clientId: "71f65d4e39334277a0f49cd651058e7a", divId: "adobe-dc-view"});
+                adobeDCView.previewFile({
+                    content:{location: {url: "https://cpbunker.github.io/CV/pdfs/BunkerCV.pdf"}},
+                    metaData:{fileName: "BunkerCV.pdf"}
+                }, {embedMode: "IN_LINE"});
+            });
+        </script>
+
+    <!-- empty column -->
+    <div class="col-sm-3"></div>  
+
+    </div>div><!-- end content row -->
 </body>
 </html>
 
