--- a/CV/index.html
+++ b/CV/index.html
@@ -30,7 +30,7 @@
     <!-- empty column -->
     <div class="col-sm-3"></div>  
 
-    </div>div><!-- end content row -->
+    </div><!-- end content row -->
 </body>
 </html>
 
