--- a/CV/index.html
+++ b/CV/index.html
@@ -11,10 +11,20 @@
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body style="background-color:Snow">
-
-    <div class = "row">
-    <div class="col-sm-3"># left col</div><div class="col-sm-6"># mod col</div><div class="col-sm-3"># right col</div>
+ 
+ <!-- Nav Bar -->
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+    <div class="navbar-header">
+        <a class="navbar-brand" href="https://en.wikipedia.org/wiki/Glossary_of_elementary_quantum_mechanics">Christian Bunker</a>
     </div>
+    <ul class="nav navbar-nav">
+        <li class="active"><a href="https://cpbunker.github.io">Home</a></li>
+        <li><a href="https://cpbunker.github.io/Research/">Research</a></li>
+        <li><a href="https://cpbunker.github.io/Publications/">Publications</a></li>
+    </ul>
+    </div>
+</nav>
  
     <div class = "row"><!-- content row-->
 
