--- a/CV/index.html
+++ b/CV/index.html
@@ -19,9 +19,9 @@
         <a class="navbar-brand" href="https://en.wikipedia.org/wiki/Glossary_of_elementary_quantum_mechanics">Christian Bunker</a>
     </div>
     <ul class="nav navbar-nav">
-        <li class="active"><a href="https://cpbunker.github.io">Home</a></li>
+        <li><a href="https://cpbunker.github.io">Home</a></li>
         <li><a href="https://cpbunker.github.io/Research/">Research</a></li>
-        <li><a href="https://cpbunker.github.io/Publications/">Publications</a></li>
+        <li><a href="https://orcid.org/0000-0003-0689-794X">Publications</a></li>
     </ul>
     </div>
 </nav>
@@ -32,7 +32,7 @@
         <div class="col-sm-3"></div>   
 
         <!-- pdf render column -->
-        <div class = "col-sm-6" id="adobe-dc-view"></div>
+        <div class = "col-sm-6" id="adobe-dc-view"><hr><h2 style="text-align:center; color: navy">Curriculum Vitae</h2><hr></div>
         <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
         <script type="text/javascript">
             document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
