--- a/Research/index.html
+++ b/Research/index.html
@@ -22,7 +22,7 @@
     <ul class="nav navbar-nav">
         <li><a href="https://cpbunker.github.io">Home</a></li>
         <li class="active"><a href="https://cpbunker.github.io/Research/">Research</a></li>
-        <li><a href="https://cpbunker.github.io/Publications/">Publications</a></li>
+        <li><a href="https://orcid.org/0000-0003-0689-794X">Publications</a></li>
     </ul>
     </div>
 </nav>
