--- a/CV/index.html
+++ b/CV/index.html
@@ -26,13 +26,17 @@
     </div>
 </nav>
  
+    <div class = "row"><!-- heading row-->
+     <div class "col-sm-3"></div><div class "col-sm-6">Curriculum Vitae</div><div class = "col-sm-3"></div>
+    </div>
+ 
     <div class = "row"><!-- content row-->
 
          <!-- empty column -->
         <div class="col-sm-3"></div>   
 
         <!-- pdf render column -->
-        <div class = "col-sm-6" id="adobe-dc-view"><hr><h2 style="text-align:center; color: navy">Curriculum Vitae</h2><hr></div>
+        <div class = "col-sm-6" id="adobe-dc-view"><hr><h2 style="text-align:center; color: navy"></h2><hr></div>
         <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
         <script type="text/javascript">
             document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
