--- a/CV/index.html
+++ b/CV/index.html
@@ -27,7 +27,7 @@
 </nav>
  
     <div class = "row"><!-- heading row-->
-     <div class "col-sm-3"></div><div class "col-sm-6">Curriculum Vitae</div><div class = "col-sm-3"></div>
+     <div class "col-sm-3"></div><div class "col-sm-6"><hr><h2 style="text-align:center; color:navy">Curriculum Vitae</h2><hr></div><div class = "col-sm-3"></div>
     </div>
  
     <div class = "row"><!-- content row-->
