--- a/CV/index.html
+++ b/CV/index.html
@@ -3,6 +3,9 @@
 <html>
 <head>
  <title>Curriculum Vitae</title>
+     <style>
+        body {font-family: 'Times New Roman', Times, serif; text-align: justify;}
+    </style>
  <meta charset="utf-8"/>
  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
  <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1"/>
