Fix CV pdfs and minor formatting

--- a/Research/index.html
+++ b/Research/index.html
@@ -52,9 +52,10 @@
         <div class="col-sm-4" style="text-align:center; color:navy;">
         <h3>Quantum Chemistry</h3></div>
         <div class="col-sm-8" style="padding:10px;font-size:18px;">
-            Many-electron quantum mechanical systems, which are the fundamental object of quantum chemistry, exhibit a variety of conceptually difficult physics. Surprisingly, however, quantum chemists have long known the way to calculate the exact ground state of any many electron system: <a href = "https://en.wikipedia.org/wiki/Full_configuration_interaction">FCI</a>. 
-            However, applying this method to all but the smallest systems is impossible with modern computing power. As a result, modern quantum chemistry is essentially a computing problem that consists of choosing and then applying the appropriate <a href = "https://doi.org/10.48550/arXiv.2102.01171">wavefunction ansatz</a>.
-        <p>My current work is with the <a href ="https://efrc.ufl.edu">Center for Molecular Magnetic Quantum Materials</a> at UF. We use electronic structure models to study the magnetic properties of molecules. Together with experimental collaborators, we are pressing forward on how to design and control molecular qubits. </p> 
+        <p>Many-electron quantum mechanical systems, which are the fundamental object of quantum chemistry, exhibit a variety of conceptually difficult physics. Surprisingly, however, quantum chemists have long known the way to calculate the exact ground state of any many electron system: <a href = "https://en.wikipedia.org/wiki/Full_configuration_interaction">FCI</a>. 
+            However, applying this method to all but the smallest systems is impossible with modern computing power. As a result, modern quantum chemistry is essentially a computing problem that consists of choosing and then applying the appropriate <a href = "https://doi.org/10.48550/arXiv.2102.01171">wavefunction ansatz</a>.</p>
+        
+        <p>My current work is with the <a href ="https://efrc.ufl.edu">Center for Molecular Magnetic Quantum Materials</a> at UF. We use numerical quantum chemistry to study the magnetic properties of molecules. Together with experimental collaborators, we are pressing forward on how to design and control molecular qubits. </p> 
         </div>
         
     </div><!-- end row and its padding -->
@@ -68,7 +69,7 @@
             <div class="row row-no-gutters"><!--separate text from image-->
             <div class = "col-sm-7"><!--text-->
             <p>Quantum computing and quantum chemistry go hand in hand. Much effort, including my own current research, is going toward determining how chemical systems can host <a href = "https://www.nature.com/articles/s41557-019-0232-y">scalable quantum computation</a>. 
-                However, my interest is more about how software will be developed on quantum computers as the hardware technology progresses, and how this software will transform many facets scientific research.</p> 
+                However, my interest is more about how software will be developed on quantum computers as the hardware technology progresses, and how this software will transform many facets of scientific research.</p> 
             </div>
             <div class = "col-sm-1"></div><!--space btwn text and image-->
             <div class = "col-sm-4"><a href = "https://en.wikipedia.org/wiki/Bloch_sphere#/media/File:Bloch_sphere.svg"><img class = "img-responsive" src = "images/BlochSphere.png"></a></div>
