--- a/Research/index.html
+++ b/Research/index.html
@@ -49,7 +49,7 @@
         <div class="col-sm-4" style="text-align:center; color:navy;">
         <h3>Quantum Chemistry</h3></div>
         <div class="col-sm-8" style="padding:10px;font-size:18px;">
-        <p>Many-electron quantum mechanical systems, which are the fundamental object of quantum chemistry, exhibit a variety of conceptually difficult physics. Surprisingly, however, quantum chemists have long known the way to calculate the exact ground state of any many electron system: <a href = "https://en.wikipedia.org/wiki/Full_configuration_interaction">FCI</a>. 
+        <p>Many-electron quantum mechanical systems, which are the fundamental subject of quantum chemistry, exhibit a variety of conceptually difficult physics. Surprisingly, however, quantum chemists have long known the way to calculate the exact ground state of any many electron system: <a href = "https://en.wikipedia.org/wiki/Full_configuration_interaction">FCI</a>. 
             However, applying this method to all but the smallest systems is impossible with modern computing power. As a result, modern quantum chemistry is essentially a computing problem that consists of choosing and then applying the appropriate <a href = "https://doi.org/10.48550/arXiv.2102.01171">wavefunction ansatz</a>.</p>
         
         <p>My current work is with the <a href ="https://efrc.ufl.edu">Center for Molecular Magnetic Quantum Materials</a> at UF. We use numerical quantum chemistry to study the magnetic properties of molecules. Together with experimental collaborators, we are pressing forward on how to design and control molecular qubits. </p> 
