--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class = "row"><!--- content row begins-->
     
         <!-- picture -->
-        <div class="col-sm-6" >
+        <div class="col-sm-6" style="text-align:center" >
             <div style="padding:0px;"><img src="images/Headshot.jpg" class="img-responsive""></div>
             
             <!-- relevant personal links -->
