--- a/Research/index.html
+++ b/Research/index.html
@@ -52,8 +52,8 @@
         <p>Many-electron quantum mechanical systems, which are the fundamental subject of quantum chemistry, exhibit a variety of conceptually difficult physics. It may be surprising to learn that quantum chemists have long known the way to calculate the exact ground state of any many electron system: <a href = "https://en.wikipedia.org/wiki/Full_configuration_interaction">FCI</a>. 
             However, applying this method to all but the smallest systems is impossible with modern computing power. As a result, modern quantum chemistry is essentially a computing problem that consists of choosing and then applying the appropriate <a href = "https://doi.org/10.48550/arXiv.2102.01171">wavefunction ansatz</a> so that your limited computing power can be used to address the physical properties you are interested in.</p>
         
-        <p>My current work is with the <a href ="https://efrc.ufl.edu">Center for Molecular Magnetic Quantum Materials</a> at UF. We use computational quantum chemistry tools to study the magnetic properties of molecules. Our goal is to overcome the <a href="https://en.wikipedia.org/wiki/DiVincenzo%27s_criteria">physical challenges</a> to implementing quantum computing devices using <a href="https://pubs.acs.org/doi/10.1021/jacs.9b009840">molecular spin qubits</a>. 
-        I have written what I hope is an accessible introduction to this current work <a href="https://cpbunker.github.io/ResearchAnatomy/">here</a>.</p> 
+        <p>My current work is with the <a href ="https://efrc.ufl.edu">Center for Molecular Magnetic Quantum Materials</a> at UF. We use computational quantum chemistry tools to study the magnetic properties of molecules. Our goal is to overcome the <a href="https://en.wikipedia.org/wiki/DiVincenzo%27s_criteria">physical challenges</a> to implementing quantum computing devices using <a href="https://pubs.acs.org/doi/10.1021/jacs.9b00984">molecular spin qubits</a>. 
+        I have written what I hope is an accessible introduction to this work <a href="https://cpbunker.github.io/ResearchAnatomy/">here</a>.</p> 
         </div>
         
     </div><!-- end row for this entry padding -->
