--- a/Research/index.html
+++ b/Research/index.html
@@ -85,9 +85,11 @@
         <p>
             One of the reasons the physics of quantum mechanical systems is such a fascinating field is that an amazing variety of behavior is possible. For example, there are millions of known molecules, each with different physical properties, and each of these can be tweaked in a multitude of ways, such as charge doping, ligand addition, or strain, leading to even more variety.
             Ever since the foundations of quantum mechanics were developed, physicists, chemists and materials scientists have been using this variety of behavior to find materials that are of great practical value to humanity, resulting in ubiquitous devices such as semiconductors and solar panels.
-        </p><p>
-            I find that this paradigm of developing useful technology is a great way of doing science. This consists of having a practical device in mind and researching with regards to the technical challenges that obstruct physically implementing the device. This practice is essentially rewarding because while theoretical physicists often spend an entire career on a narrow problem,
-            usable technology always demands knowledge of multiple areas. Quantum computing is a great example of this, combining quantum physics and computer science.
+        </p>
+        <p>
+           This technology paradigm is especially relevant to my current work on molecular spin qubits. Viable quantum hardware really only exists with superconducting qubits, which are themselves still pretty bleeding edge. Molecular spin qubits are even less mature, but it is beneficial to look at all the work that's
+            been done with superconducting qubit and see it as a roadmap in terms of the engineering challenges that need to be overcome. At the same time, we need to justify why this less mature technology might be better that the current state of the art in the future. 
+            So the perspective of doing science as if you're comparing and contrasting commercial technologies is incredibly helpful.
         </p>
         </div>
         
