--- a/Research/index.html
+++ b/Research/index.html
@@ -87,8 +87,8 @@
             Ever since the foundations of quantum mechanics were developed, physicists, chemists and materials scientists have been using this variety of behavior to find materials that are of great practical value to humanity, resulting in ubiquitous devices such as semiconductors and solar panels.
         </p>
         <p>
-           This technology paradigm is especially relevant to my current work on molecular spin qubits. Viable quantum hardware really only exists with superconducting qubits, which are themselves still pretty bleeding edge. Molecular spin qubits are even less mature, but it is beneficial to look at all the work that's
-            been done with superconducting qubit and see it as a roadmap in terms of the engineering challenges that need to be overcome. At the same time, we need to justify why this less mature technology might be better that the current state of the art in the future. 
+           This technology paradigm is especially relevant to my current work on molecular spin qubits. Viable quantum hardware really only exists with superconducting qubits, which are themselves still pretty bleeding edge. Molecular spin qubits are even less mature, so it is beneficial to look at all the work that's
+            been done with superconducting qubits and see it as a roadmap in terms of the engineering challenges that need to be overcome. At the same time, we need to justify why this less mature technology might be better that the current state of the art in the future. 
             So the perspective of doing science as if you're comparing and contrasting commercial technologies is incredibly helpful.
         </p>
         </div>
