--- a/Research/index.html
+++ b/Research/index.html
@@ -73,6 +73,8 @@
         <p>
             
             Throughout the 20th century, physicists, chemists and materials scientists have applied the laws of quantum mechanics to describe materials. This has led to ubiquitous devices such as semiconductors and solar panels.
+            However, these devices are typically micrometer sized, whereas quantum mechanical effects only really dominate at nanometer scale. Recent experimental advances in our ability to construct systems at this miniscule length scale
+            promises a next generation of electronics that is fundamentally quantum mechanical in nature.
         </p>
         </div>
         
