--- a/Research/index.html
+++ b/Research/index.html
@@ -99,8 +99,8 @@
             <div><!--new paragraph below image-->
                 <p>What I enjoy most about working in quantum computing hardware is that we are developing technology, not just doing basic science.
                 Superconducting qubits are the only truly viable quantum hardware out there right now, and they remain pretty bleeding edge. Other hardware proposals, including MSQs, are even less mature.
-                However, we have the advantage of being able to look to the other technologies out there and see a roadmap of the engineering challenges that need to be overcome. 
-                At the same time, we need to justify why our less mature hardware might be better that the current state of the art in the future. This requires taking a really discerning look at potential weaknesses of the other technologies.
+                However, we have the advantage of being able to look at the other technologies out there as a roadmap of the engineering challenges that need to be overcome. 
+                At the same time, we need to justify how our less mature hardware could some day be better than the current state of the art. This requires taking a really discerning look at potential weaknesses of the other technologies.
                 I find this mindset of doing science as if I'm comparing and contrasting commercial technologies to be incredibly rewarding.</p>
             </div><!--new paragraph below image-->
             
