--- a/Research/index.html
+++ b/Research/index.html
@@ -89,8 +89,8 @@
             
             <div class="row row-no-gutters"><!--separate text from image-->
             <div class = "col-sm-7"><!--text-->
-            <p>The past two decades have seen intense research into how quantum mechanical systems can store and process information. The quantum computers that have been built remain functionally limited, in large part due to their small number of information storage units (qubits).
-                Molecular physics offers a vast new frontier for building <a href = "https://www.nature.com/articles/s41557-019-0232-y">scalable hardware</a> for quantum computers.
+            <p>The past two decades have seen intense research into how quantum mechanical systems can store and process information. However, existing quantum computers remain functionally limited, in large part due to their small number of information storage units (qubits).
+                Molecular physics offers a new frontier of <a href = "https://www.nature.com/articles/s41557-019-0232-y">scalable hardware</a> for quantum computers.
             </div>
             <div class = "col-sm-1"></div><!--space btwn text and image-->
             <div class = "col-sm-4"><a href = "https://en.wikipedia.org/wiki/Bloch_sphere#/media/File:Bloch_sphere.svg"><img class = "img-responsive" src = "images/BlochSphere.png"></a></div>
