--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
                 <div style="padding:0px; font-size:18px;">
                     <p>I am a research assistant at the <a href="https://efrc.ufl.edu">Center for Molecular Magnetic Quantum Materials</a> at the University of Florida. Currently, I am investigating the interaction between a single conduction band electron and magnetic molecules, with the goal of manipulating the entanglement state of the molecules for quantum information science applications.</p>
                     
-                    <p>Broadly, my research area is molecular physics, a field which promises to revolutionize humanity's computing power and medicinal capabilities, among other things. More specifically, I am interested in the molecular electronic structure problem as a fundamental <a href="https://doi.org/10.1142/S0217979214300217">computing problem</a>. 
-                    I have pursued this by studying computational quantum chemistry methods such as Full Configuration Interaction (FCI) and Density Matrix Renormalization Group (DMRG). However, I am most interested in how quantum computing algorithms can solve this problem. 
-                    My interest in quantum computing also extends to a fascination with the intersection of fundamental physics and technology, as well as the extent to which basic quantum science can become intellectual property.</p>
+                    <p>My research is in molecular physics, a field which promises to revolutionize humanity's computing power and medical capabilities, among other things. 
+                    Molecules are so promising because they give rise to a rich variety of behaviors, and because they are small enough that quantum effects become important.
+                    My current interests lie in leveraging the quantum nature of molecules to build information processing hardware, which could then be used to construct quantum computers.
+                    I am also curious about the software side of quantum computing, and the process by which the basic principles of quantum mechanics are applied as an algorithm, which may then become intellectual property.</p>
                 
         </div></div>
         </div><!-- end bio infocolumn -->
