--- a/Research/index.html
+++ b/Research/index.html
@@ -93,7 +93,7 @@
                 Molecular physics offers a new frontier of <a href = "https://www.nature.com/articles/s41557-019-0232-y">scalable hardware</a> for quantum computers.
             </div>
             <div class = "col-sm-1"></div><!--space btwn text and image-->
-            <div class = "col-sm-4"><a href = "https://en.wikipedia.org/wiki/Bloch_sphere#/media/File:Bloch_sphere.svg"><img class = "img-responsive" src = "images/BlochSphere.png"></a></div>
+            <div class = "col-sm-4"><a href = "https://en.wikipedia.org/wiki/Bloch_sphere"><img class = "img-responsive" src = "images/BlochSphere.png"></a></div>
             </div><!--end row no gutters-->
             
             <div><!--new paragraph below image-->
