--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@
         <!-- bio info -->
         <div class="col-sm-6 center" >
                 <div style="padding:0px; font-size:18px;">
-                    <p>I am a research assistant at the <a href="https://efrc.ufl.edu">Center for Molecular Magnetic Quantum Materials</a> at the University of Florida. Currently, I am investigating the interaction between a single conduction band electron and magnetic molecules, with the goal of manipulating the entanglement state of the molecules for quantum information science applications.</p>
+                    <p>I am a research assistant at the <a href="https://efrc.ufl.edu">Center for Molecular Magnetic Quantum Materials</a> at the University of Florida. 
+                My work focuses on the interaction between conduction band electrons and magnetic molecules, with the goal of manipulating the entanglement state of the molecules for quantum information science applications.</p>
                     
                     <p>My research is in molecular physics, a field which promises to revolutionize humanity's computing power and medical capabilities, among other things. 
                     Molecules are so promising because they give rise to a rich variety of behaviors, and because they are small enough that quantum effects become important.
-                    My current interests lie in leveraging the quantum nature of molecules to build information processing hardware, which could then be used to construct quantum computers.
-                    I am also curious about the software side of quantum computing, and the process by which the basic principles of quantum mechanics are applied as an algorithm, which may then become intellectual property.</p>
+                    My current research is directed toward leveraging the quantum nature of molecules to build quantum computing hardware.
+                    Recently, I have also become interested in quantum software development, a field that combines my core comptencies of quantum physics and programming, and I have learning <a href="https://qiskit.org">Qiskit</a> in my spare time.
+                    It is fascinating to see quantum algorithms extract practical value from the tenets of quantum mechanics, and I will be watching avidly as basic science collides with questions commercialization and intellectual property.</p>
                 
         </div></div>
         </div><!-- end bio infocolumn -->
