--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                     <p>My research is in molecular physics, a field which promises to revolutionize humanity's computing power and medical capabilities, among other things. 
                     Molecules are so promising because they give rise to a rich variety of behaviors, and because they are small enough that quantum effects become important.
                     My current research is directed toward leveraging the quantum nature of molecules to build quantum computing hardware.
-                    Recently, I have also become interested in quantum software development, a field that combines my core comptencies of quantum physics and programming, and I have been learning <a href="https://qiskit.org">Qiskit</a> in my spare time.</p>
+                    Recently, I have also become interested in quantum software development, a field that combines my core competencies of quantum physics and programming, and I have been learning <a href="https://qiskit.org">Qiskit</a> in my spare time.</p>
 
-                    <p>As I have learned more about quantum computing, another fascinating field has grabbed my attention: intellectual property. After all, the quantum computing community has been increasingly succesful in
-                    generating practical value from the laws of physics. Commercialization is inevitable, but nearly impossible without a deep inderstanding of both the science and the law.
+                    <p>As I have learned more about quantum computing, another fascinating field has grabbed my attention: intellectual property. After all, the quantum computing community has been increasingly successful in
+                    generating practical value from the laws of physics. Commercialization is inevitable, but nearly impossible without a deep understanding of both the science and the law.
                     I hope to continue to explore both fields, because the impending collision between them will have major consequences. </p>
                 
         </div></div>
