--- a/Reading/index.html
+++ b/Reading/index.html
@@ -22,8 +22,7 @@
     <ul class="nav navbar-nav">
         <li><a href="https://cpbunker.github.io/">Home</a></li>
         <li><a href="https://cpbunker.github.io/Research/">Research</a></li>
-        <li><a href="https://cpbunker.github.io/Publications/">Publications</a></li>
-        <li><a href="https://cpbunker.github.io/Teaching/">Teaching</a></li>
+        <li><a href="https://scholar.google.com/citations?user=oU_yDCgAAAAJ&hl=en">Publications</a></li>
     </ul>
     </div>
 </nav>
